--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2"
