--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mantine/hooks": "^7.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.14.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
