--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@mantine/core": "^7.12.1",
+    "@mantine/form": "^7.12.2",
     "@mantine/hooks": "^7.12.1",
+    "@mantine/modals": "^7.12.2",
+    "@mantine/notifications": "^7.12.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.14.0",
     "axios": "^1.7.7",
